fix responsive problems

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,9 @@
     {{ content }}
   </main>
 
-  {% include footer.html %}
-
-  <script src="https://swift.org/assets/javascripts/application.js"></script>
+  <script type="text/javascript">
+    // add JS codes here, if needed
+  </script>
 </body>
 
 </html>
