--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
   <script type="text/javascript">
     // add JS codes here, if needed
   </script>
+  <a href="https://github.com/SwiftGGTeam/google-swift-style-guide-in-chinese"><img width="149" height="149" src="https://github.blog/wp-content/uploads/2008/12/forkme_right_darkblue_121621.png?resize=149%2C149" class="attachment-full size-full" alt="Fork me on GitHub" data-recalc-dims="1"></a>
 </body>
 
 </html>
